# aes-gcm

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
cmake/: clean.cmake  debug.cmake  run.cmake
include/: aes.h  aes_test.h  gcm.h  gcm_test.h  util.h
src/: aes.c  aes_test.c  foo.c  gcm.c  gcm_test.c  main.c  util.c
